Fixed a mistake in a post, added some spacing between bullets

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,10 @@ a {
     text-decoration: none;
 }
 
+li {
+    margin-bottom: 5px;
+}
+
 a:hover {
     text-decoration: underline;
 }
